<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="challenge"
            type="org.chenhome.dailybrainy.repo.Challenge" />

        <variable
            name="listener"
            type="org.chenhome.dailybrainy.ui.challenges.ChallengeListener" />
    </data>


    <com.google.android.material.card.MaterialCardView
        app:contentPadding="@dimen/margin_medium"
        app:cardUseCompatPadding="true"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{challenge.category.toString()}"
                android:textAppearance="@style/TextAppearance.Brainy.Overline"
                tools:text="Challenge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{challenge.title}"
                android:textAppearance="@style/TextAppearance.Brainy.Headline6"
                tools:text="Lorem ipsum" />

            <TextView
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{challenge.desc}"
                android:textAppearance="@style/TextAppearance.Brainy.Body2"
                tools:text="Description" />

            <!-- Buttons -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_height="@dimen/img_large_height"
                app:imageUrl="@{challenge.imageUri}"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_large"
                    style="@style/Widget.Brainy.Button.TextButton"
                    android:onClick="@{()->listener.onNewGame(challenge)}"
                    android:text="@string/new_game" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Brainy.Button.TextButton"
                    android:onClick="@{()->listener.onJoinGame(challenge)}"
                    android:text="@string/join_game" />


            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>

    