<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.chenhome.dailybrainy.ui.story.StoryVM" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        style="@style/Widget.Brainy.CardContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/TextAppearance.Brainy.Headline5"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginBottom="@dimen/margin_large"
                app:expandedTitleTextAppearance="@style/TextAppearance.Brainy.CollapsingToolbar.Transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:statusBarScrim="?attr/colorPrimaryVariant"
                app:title="@string/review_story">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryColor"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_medium">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/img_large_height"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_large"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:imageUrl="@{vm.fullGame.challenge.imageUri}"
                        android:src="@drawable/ic_broken_image" />

                </LinearLayout>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    style="@style/Widget.MaterialComponents.Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/appbar_height"
                    android:elevation="0dp"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways|snap"
                    app:navigationIcon="@drawable/round_arrow_back_24" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/sheet_height_collapsed"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:padding="@dimen/margin_medium"
                    android:background="@color/primaryColor"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@{vm.fullGame.game.storyTitle}"
                        tools:text="Donkey Mates"
                        android:textAppearance="@style/TextAppearance.Brainy.Headline4" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opportunity"
                        android:layout_marginTop="@dimen/margin_large"
                        android:textAppearance="@style/TextAppearance.Brainy.Overline" />

                    <TextView
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Brainy.Body1"
                        android:text="@{vm.fullGame.challenge.hmw}"
                        tools:text="How might we transport our school stuff in new ways?" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/solution"
                        android:layout_marginTop="@dimen/margin_large"
                        android:textAppearance="@style/TextAppearance.Brainy.Overline" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:text="@{vm.fullGame.game.storyDesc}"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lectus quis turpis et a in pellentesque vitae."
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="@style/TextAppearance.Brainy.Body1" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_height="match_parent"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/item_sketch" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/avatars"
            layout="@layout/sheet_avatar" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>