<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.chenhome.dailybrainy.ui.lesson.LessonVM" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_xlarge_height"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/TextAppearance.Brainy.Headline5"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginBottom="@dimen/margin_large"
                app:expandedTitleTextAppearance="@style/TextAppearance.Brainy.Headline5"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:statusBarScrim="?attr/colorPrimaryVariant"
                app:title="@{vm.lesson.challenge.title}">

                <ImageView
                    android:id="@+id/imageLesson"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/img_xlarge_height"
                    android:contentDescription="@string/app_name" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/appbar_height"
                    android:elevation="0dp"
                    app:layout_collapseMode="pin"
                    style="@style/Widget.MaterialComponents.Toolbar"
                    app:layout_scrollFlags="scroll|enterAlways|snap"
                    app:navigationIcon="@drawable/round_close_24" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/img_xlarge_height"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        app:imageUrl="@{vm.thumbUri}"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <Button
                        style="@style/Widget.Brainy.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="@{()->vm.navToYoutube()}"
                        android:text="@string/watch" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_medium"
                    tools:context=".ui.lesson.ViewLessonFrag">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/description"
                        android:textAppearance="@style/TextAppearance.Brainy.Overline"
                        tools:text="Description" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@{vm.lesson.challenge.desc}"
                        android:textAppearance="@style/TextAppearance.Brainy.Body2"
                        tools:text="Foobar lorem ipsum" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>